--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-body {
+html,body {
     background-image: url(https://media.giphy.com/media/3oGRFlpAW4sIHA02NW/giphy.gif);
-    
+    background-repeat: no-repeat;
+    background-size: cover;
 }
