--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,73 @@ body {
     margin: auto;
     padding-bottom: 60px;
 }
+
+.player1Header,
+.player2Header {
+    margin: auto;
+    margin-top: 50px;
+    width: 167px;
+    height: 53px;
+    text-align: center;
+    color:dimgray;
+}
+
+
+.player1Score,
+.player2Score {
+    margin: auto;
+    font-size: 75px;
+    color:dimgray;
+    opacity: 0.7;
+    position: relative;
+    transform: translate(0%, -13%);
+    padding-inline-start:  40px;
+}
+
+.player1TotalScore,
+.player2TotalScore {
+    font-family: 'Balthazar', serif;
+    font-size: 1rem;
+    text-align: center;
+    color: #444444;
+    opacity: 0.5;
+    font-weight: 100;
+}
+
+.player1ScoreNo,
+.player2ScoreNo {
+    position: relative;
+    margin: auto;
+    font-family: 'Balthazar', serif;
+    font-size: 20px;
+    color: #444444;
+    opacity: 10;
+    margin-bottom: 12px;
+}
+
+.player1ScoreDiv,
+.player2ScoreDiv {
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+    font-weight: 60;
+    margin: auto;
+    font-family: 'Balthazar', serif;
+    text-align: center;
+    color: #444444;
+    width: 115px;
+    height: 77px;
+    background-color:black;
+    margin-bottom: 4rem;
+    border-radius:  250px;
+
+}
+
+.player2Div {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 100%;
+    background-color: #d8d8d8;
+    opacity: 0.7;
+    height: 470px;
+}
