--- a/css/styles.css
+++ b/css/styles.css
@@ -107,3 +107,25 @@ body {
     opacity: 0.7;
     height: 470px;
 }
+
+.middleSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    right: 50%;
+    transform: translate(0,-13%);
+}
+
+.instructions {
+    display:flex;
+    flex-direction: column;
+    flex: 1 1 600px;
+    position: relative;
+    align-self: flex-end;
+    font-family: 'Balthazar', sans-serif;
+    font-size: .80rem;
+    color: #444444;
+    text-align: center;
+    transform:translate(1.5%,330%);   
+}
