--- a/css/styles.css
+++ b/css/styles.css
@@ -45,29 +45,34 @@ body {
     width: 167px;
     height: 53px;
     text-align: center;
-    color:dimgray;
-}
 
+}
+.player1Header{
+    color:deeppink;
+}
+.player2Header{
+    color: darkviolet;
+}
 
 .player1Score,
 .player2Score {
     margin: auto;
-    font-size: 75px;
-    color:dimgray;
-    opacity: 0.7;
+    font-size: 80px;
+    font-style: italic;
+    color:rgb(78, 8, 51);
+    opacity: 70;
     position: relative;
     transform: translate(0%, -13%);
-    padding-inline-start:  40px;
 }
 
 .player1TotalScore,
 .player2TotalScore {
     font-family: 'Balthazar', serif;
-    font-size: 1rem;
+    font-size: 0.7rem;
     text-align: center;
-    color: #444444;
-    opacity: 0.5;
-    font-weight: 100;
+    color:whitesmoke;
+    opacity: 160;
+    font-weight: bold;
 }
 
 .player1ScoreNo,
@@ -77,15 +82,15 @@ body {
     font-family: 'Balthazar', serif;
     font-size: 20px;
     color: #444444;
-    opacity: 10;
-    margin-bottom: 12px;
+    opacity: 20;
+
 }
 
 .player1ScoreDiv,
 .player2ScoreDiv {
     display: flex;
     flex-direction: column;
-    font-size: 10px;
+    font-size: 30px;
     font-weight: 60;
     margin: auto;
     font-family: 'Balthazar', serif;
@@ -95,8 +100,14 @@ body {
     height: 77px;
     background-color:black;
     margin-bottom: 4rem;
-    border-radius:  250px;
+    border-radius: 20px;
 
+}
+.player2ScoreDiv{
+    margin-bottom: 150px;
+}
+.player1ScoreDiv{
+    margin-bottom: 90px;
 }
 
 .player2Div {
@@ -120,11 +131,11 @@ body {
 .instructions {
     display:flex;
     flex-direction: column;
-    flex: 1 1 600px;
+    flex: 1 1 1000px;
     position: relative;
     align-self: flex-end;
     font-family: 'Balthazar', sans-serif;
-    font-size: .80rem;
+    font-size: .98rem;
     color: #444444;
     text-align: center;
     transform:translate(1.5%,330%);   
@@ -176,11 +187,14 @@ button {
 
 .newGameBtn{
     position: relative;
-    transform: translate(0%, -425%);
+    transform: translate(0%, -400%);
+    resize: 50px;
+    color: red;
 }
 .newGameBtn img{
-    height: .75rem;
+    height: .96rem;
     transform: translate(-25%,15%);
+    color:red;
 }
 
 .rollBtn { 
