--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
     background-size: cover;
 }
 
-.container {
+.contain {
     display: flex;
     position: relative;
     align-items: center;
@@ -25,6 +25,7 @@ body {
     align-items: center;
     width: 1500px;
     height:600px;
+    padding-right: 250px;
 }
 
 .player1Div {
@@ -36,8 +37,9 @@ body {
     opacity:0.7;
     height: 470px;
     margin: auto;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px;  */
     border-radius: 20px;
+
 }
 
 .player1Header,
@@ -71,32 +73,29 @@ body {
 
 }
 
-.player1TotalScore,
-.player2TotalScore {
+.player1TotalScore,.player2TotalScore {
     font-family: 'Permanent Marker', cursive;
-    font-size: 0.7rem;
+    /* font-size: 0.7em; */
     text-align: center;
     color:whitesmoke;
-    opacity: 160;
+    opacity: 100;
     font-weight: bold;
 }
 
-.player1ScoreNo,
-.player2ScoreNo {
+.player1ScoreNo,.player2ScoreNo{
     position: relative;
     margin: auto;
     font-family: 'Permanent Marker', cursive;
     font-size: 20px;
-    color: darkslategrey;
+    color:white;
     opacity: 20;
 
 }
 
-.player1ScoreDiv,
-.player2ScoreDiv {
+.player1ScoreDiv,.player2ScoreDiv {
     display: flex;
     flex-direction: column;
-    font-size: 30px;
+    font-size: 30px; 
     font-weight: 60;
     margin: auto;
     font-family: 'Permanent Marker', cursive;
@@ -105,16 +104,15 @@ body {
     width: 115px;
     height: 77px;
     background-color:salmon;
-    margin-bottom: 4rem;
+    margin-bottom: 0.4rem;
     border-radius: 20px;
+    /* padding-top: 50px; */
 
 }
-.player2ScoreDiv{
-    margin-bottom: 150px;
-}
-.player1ScoreDiv{
-    margin-bottom: 90px;
-}
+/* .player2ScoreDiv,.player1ScoreDiv{
+    margin-top: 160px;
+} */
+
 
 .player2Div {
     display: flex;
@@ -124,7 +122,9 @@ body {
     opacity: 0.7;
     height: 470px;
     border-radius: 20px;
+
 }
+
 
 .middleSection {
     display: flex;
@@ -143,9 +143,9 @@ body {
     align-self: flex-end;
     font-family: 'Permanent Marker', cursive;
     font-size: .98rem;
-    color: #444444;
+    color:white;
     text-align: center;
-    transform:translate(1.5%,330%);   
+    transform:translate(1.5%,330%); 
 }
 
 .keepBtn {
@@ -161,6 +161,11 @@ body {
 .keepBtn button {
     color: rgb(253, 253, 253);
     border-radius: 9px;
+    width:60px;
+    height:50px;
+    padding-right:10px;
+    margin-top: 30px;
+    margin-right: 48px;
 
 }
 
@@ -209,17 +214,20 @@ button {
 
 .rollBtn { 
     position:relative;
-    margin-bottom:45px;
+    margin-bottom:20px;
     transform: translate(0%, 405%);
-
 }
 .rollBtn img {
     height: .75rem;
     transform: translate(-25%, 15%);
     width:50px;
-    height:20px;
+    height:50px;
 }
 
 .activeJS{
     display:inline-block;
+}
+.game-start {
+    transform: translate(-25%, 15%);
+    margin-left:0px;
 }
