made changes to questions.html,css and js file

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,15 +206,6 @@ button {
     padding-top: .1rem;
     font-weight: 100;
 }
-
-.diceJS {
-    width: 94px;
-    height: 90px;
-    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-}
-
-}
 .rollBtn1 p{
     color: rgb(253, 253, 253);
 }
@@ -223,11 +214,11 @@ button {
 }
 
 .rollBtn1{
-    margin-right:100%;
+    margin-right:300px;
     padding:5px 0px;
 }
 .rollBtn2{
-    margin-left:100%;
+    margin-left:00px;
 }
 .rollBtn1,.rollBtn2 { 
     color: rgb(253, 253, 253);
@@ -240,19 +231,12 @@ button {
     /* height: .75rem; */
     transform: translate(-25%, 15%);
     width:50px;
-    height:50px;
+    height:100px;
 }
 
-.activeJS{
-    display:inline-block;
-}
-.game-start {
-    transform: translate(-25%, 15%);
-    margin-left:0px;
-}
-.keepBtn1{
-    /* height: 50px;
+.holdBtn1{
+    height: 50px;
     width:50px;
- margin-left: 100%;
-    float:right; */
+    margin-left: 100%;
+    float:right;
 }
